docs: documentation reviewed;
added lacking images;

re-organized docs directory

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,41 +5,42 @@ repo_url: https://github.com/Noovolari/leapp
 nav:
   - Overview: index.md
   - Concepts: concepts.md
-  - 'Use Cases':
-      - 'AWS IAM User': 'use-cases/aws_iam_user.md'
-      - 'AWS IAM Role': 'use-cases/aws_iam_role.md'
-      - 'AWS SSO': 'use-cases/aws_sso.md'
-      - 'Azure': 'use-cases/azure.md'
+  - 'Use Cases': 'use-cases/intro.md'
+      # - 'Introduction': 'use-cases/intro.md'
+      - 'AWS':
+        - 'AWS IAM User': 'use-cases/aws_iam_user.md'
+        - 'AWS IAM Role': 'use-cases/aws_iam_role.md'
+        - 'AWS SSO': 'use-cases/setup_in_leapp.md'
+      - 'Azure': 'use-cases/intro.md'
   - 'Tutorials':
       - 'First Access': 'tutorials/first_access.md'
       - 'AWS':
-        - 'IAM User': 'tutorials/aws/iam_user_setup.md'
-        - 'IAM Federated Role':
-          - 'G Suite Federation': 'tutorials/aws/federated/gsuite_federation_setup.md'
-          - 'AWS Federation': 'tutorials/aws/federated/aws_federation_setup.md'
-          - 'Enable Federated Access': 'tutorials/aws/federated/enable_federated_access.md'
-          - 'Assign Role to GSuite Principal': 'tutorials/aws/federated/assign_role.md'
-          - 'Setup Leapp Federated': 'tutorials/aws/federated/leapp_federated_setup.md'
-        - 'IAM Chained Role':
-          - 'Setup Trust Relationship': 'tutorials/aws/chained/trust_setup.md'
-          - 'Setup Leapp Chained': 'tutorials/aws/chained/leapp_chained_setup.md'
-        - 'AWS SSO': 'tutorials/aws/aws_sso.md'
-        - 'AWS SSM Connect': 'tutorials/aws/ssm.md'
+        - 'AWS IAM User': 'tutorials/aws/setup_in_leapp.md'
+        - 'AWS IAM Federated Role': 'tutorials/aws/intro.md'
+          - 'Step 1: G Suite Federation': 'tutorials/aws/iam_federated_role/gsuite_federation_setup.md'
+          - 'Step 2: AWS Federation': 'tutorials/aws/iam_federated_role/aws_federation_setup.md'
+          - 'Step 3: Enable Federated Access': 'tutorials/aws/iam_federated_role/enable_federated_access.md'
+          - 'Step 4: Assign Role to GSuite Principal': 'tutorials/aws/iam_federated_role/assign_role.md'
+          - 'Step 5: Setup in Leapp': 'tutorials/aws/iam_federated_role/setup_in_leapp.md'
+        - 'AWS IAM Chained Role': 'tutorials/aws/intro.md'
+          - 'Step 1: Setup Trust Relationship': 'tutorials/aws/iam_chained_role/trust_relationship_setup.md'
+          - 'Step 2: Setup in Leapp': 'tutorials/aws/iam_chained_role/setup_in_leapp.md'
+        - 'AWS SSO': 'tutorials/aws/setup_in_leapp.md'
+        - 'AWS SSM Connect': 'tutorials/aws/aws_ssm.md'
       - 'Azure':
-        - 'G Suite Federation': 'tutorials/azure/gsuite_federation_setup.md'
-        - 'Setup Leapp Federated': 'tutorials/azure/leapp_federated_setup.md'
+        - 'Step 1: G Suite Federation': 'tutorials/azure/gsuite_federation_setup.md'
+        - 'Step 2: Setup in Leapp': 'tutorials/azure/setup_in_leapp.md'
       - 'Misc':
           - 'Quick List': 'tutorials/misc/quick_list.md'
           - 'Default Region/Location': 'tutorials/misc/defaults.md'
           - 'Session Region/Location': 'tutorials/misc/session_region.md'
           - 'Named Profiles': 'tutorials/misc/named_profiles.md'
   - 'Contributing':
-      - 'Project Structure':
-          - 'Overview': 'contributing/structure/overview.md'
-          - 'Updater': 'contributing/structure/updater.md'
-          - 'System Vault': 'contributing/structure/system_vault.md'
-          - 'AWS Named Profiles': 'contributing/structure/aws_named_profiles.md'
-          - 'AWS SSO': 'contributing/structure/aws_sso.md'
+      - 'Project Structure': 'contributing/structure/structure.md'
+      - 'Updater': 'contributing/structure/updater.md'
+      - 'System Vault': 'contributing/structure/system_vault.md'
+      - 'AWS Named Profiles': 'contributing/structure/aws_named_profiles.md'
+      - 'AWS SSO': 'contributing/structure/setup_in_leapp.md'
   - 'Community':
       - 'Get Involved': 'community/get_involved.md'
       - 'Guides and Resources': 'community/guides.md'
