docs: fixed mkdocs.yml

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,8 +5,8 @@ repo_url: https://github.com/Noovolari/leapp
 nav:
   - Overview: index.md
   - Concepts: concepts.md
-  - 'Use Cases': 'use-cases/intro.md'
-      # - 'Introduction': 'use-cases/intro.md'
+  - 'Use Cases':
+      - 'Introduction': 'use-cases/intro.md'
       - 'AWS':
         - 'AWS IAM User': 'use-cases/aws_iam_user.md'
         - 'AWS IAM Role': 'use-cases/aws_iam_role.md'
@@ -16,13 +16,15 @@ nav:
       - 'First Access': 'tutorials/first_access.md'
       - 'AWS':
         - 'AWS IAM User': 'tutorials/aws/setup_in_leapp.md'
-        - 'AWS IAM Federated Role': 'tutorials/aws/intro.md'
+        - 'AWS IAM Federated Role':
+          - 'Introduction': 'tutorials/aws/intro.md'
           - 'Step 1: G Suite Federation': 'tutorials/aws/iam_federated_role/gsuite_federation_setup.md'
           - 'Step 2: AWS Federation': 'tutorials/aws/iam_federated_role/aws_federation_setup.md'
           - 'Step 3: Enable Federated Access': 'tutorials/aws/iam_federated_role/enable_federated_access.md'
           - 'Step 4: Assign Role to GSuite Principal': 'tutorials/aws/iam_federated_role/assign_role.md'
           - 'Step 5: Setup in Leapp': 'tutorials/aws/iam_federated_role/setup_in_leapp.md'
-        - 'AWS IAM Chained Role': 'tutorials/aws/intro.md'
+        - 'AWS IAM Chained Role':
+          - 'Introduction': 'tutorials/aws/intro.md'
           - 'Step 1: Setup Trust Relationship': 'tutorials/aws/iam_chained_role/trust_relationship_setup.md'
           - 'Step 2: Setup in Leapp': 'tutorials/aws/iam_chained_role/setup_in_leapp.md'
         - 'AWS SSO': 'tutorials/aws/setup_in_leapp.md'
