--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -16,4 +16,5 @@ jobs:
           python-version: 3.x
       - run: pip install mkdocs-material
       - run: pip install mkdocs-video
+      - run: pip install mkdocs-img2fig-plugin
       - run: mkdocs gh-deploy --force
