added docs site description

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,7 @@
 site_name: Leapp
 site_url: https://example.com/
 repo_url: https://github.com/Noovolari/leapp
+site_description: 'Leapp is a tool for developers to manage, secure, and gain access to any cloud. From setting up your access data to activating a session, Leapp can help manage the underlying assets to let you use your provider CLI or SDK seamlessy.'
 
 nav:
   - Overview: index.md
