docs: added google analytics

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -74,6 +74,11 @@ plugins:
 extra_css:
   - stylesheets/extra.css
 
+extra:
+  analytics:
+    provider: google
+    property: G-FB1NX90MYZ
+
 markdown_extensions:
   - pymdownx.emoji:
       emoji_index: !!python/name:materialx.emoji.twemoji
