--- a/package.json
+++ b/package.json
@@ -213,6 +213,7 @@
     "ngx-toastr": "~13.2.1",
     "node-log-rotate": "~0.1.5",
     "node-machine-id": "~1.1.12",
+    "ps-list": "^7.2.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "~3.0.2",
     "rxjs": "~6.6.7",
@@ -255,6 +256,7 @@
     "eslint-plugin-import": "latest",
     "eslint-plugin-jsdoc": "latest",
     "eslint-plugin-prefer-arrow": "latest",
+    "husky": "^7.0.0",
     "jasmine": "^3.7.0",
     "jasmine-core": "~3.7.1",
     "jasmine-spec-reporter": "~7.0.0",
@@ -269,10 +271,10 @@
     "nyc": "^15.1.0",
     "protractor": "^7.0.0",
     "ts-node": "^9.1.1",
-    "typescript": "4.1.5",
-    "husky": "^7.0.0"
+    "typescript": "4.1.5"
   },
   "browser": {
-    "crypto": false
+    "crypto": false,
+    "child_process": false
   }
 }
