--- a/package.json
+++ b/package.json
@@ -172,7 +172,7 @@
     "@ng-select/ng-select": "~6.1.0",
     "@ngx-translate/core": "~13.0.0",
     "@ngx-translate/http-loader": "~6.0.0",
-    "@sebgroup/ng-magic-iframe": "1.0.2",
+    "@sebgroup/magic-iframe": "1.1.2",
     "@types/jest": "~26.0.23",
     "aws-sdk": "~2.893.0",
     "aws-sdk-mock": "^5.1.0",
