chore: tsconfig.json changed module to esnext

--- a/package.json
+++ b/package.json
@@ -159,14 +159,14 @@
     }
   },
   "dependencies": {
-    "@angular/animations": "~11.2.11",
-    "@angular/common": "~11.2.11",
-    "@angular/compiler": "~11.2.11",
-    "@angular/core": "~11.2.11",
-    "@angular/forms": "~11.2.11",
-    "@angular/platform-browser": "~11.2.11",
-    "@angular/platform-browser-dynamic": "~11.2.11",
-    "@angular/router": "~11.2.11",
+    "@angular/animations": "~12.2.7",
+    "@angular/common": "~12.2.7",
+    "@angular/compiler": "~12.2.7",
+    "@angular/core": "~12.2.7",
+    "@angular/forms": "~12.2.7",
+    "@angular/platform-browser": "~12.2.7",
+    "@angular/platform-browser-dynamic": "~12.2.7",
+    "@angular/router": "~12.2.7",
     "@commitlint/cli": "^12.1.4",
     "@commitlint/config-conventional": "^12.1.4",
     "@ng-select/ng-select": "~6.1.0",
@@ -174,8 +174,8 @@
     "@ngx-translate/http-loader": "~6.0.0",
     "@sebgroup/magic-iframe": "1.1.2",
     "@types/jest": "~26.0.23",
-    "aws-sdk": "~2.893.0",
-    "aws-sdk-mock": "^5.1.0",
+    "aws-sdk": "2.928.0",
+    "aws-sdk-mock": "5.3.0",
     "bootstrap": "~4.6.0",
     "chdir": "0.0.0",
     "class-transformer": "^0.4.0",
@@ -228,15 +228,15 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1102.10",
+    "@angular-devkit/build-angular": "^12.2.7",
     "@angular-eslint/builder": "12.5.0",
     "@angular-eslint/eslint-plugin": "4.2.0",
     "@angular-eslint/eslint-plugin-template": "4.2.0",
     "@angular-eslint/schematics": "12.5.0",
     "@angular-eslint/template-parser": "4.2.0",
-    "@angular/cli": "^11.2.10",
-    "@angular/compiler-cli": "^11.2.11",
-    "@angular/language-service": "~11.2.11",
+    "@angular/cli": "^12.2.7",
+    "@angular/compiler-cli": "^12.2.7",
+    "@angular/language-service": "~12.2.7",
     "@biesbjerg/ngx-translate-extract": "^7.0.4",
     "@types/aws-sdk": "^2.7.0",
     "@types/jasmine": "^3.6.10",
@@ -269,7 +269,7 @@
     "nyc": "^15.1.0",
     "protractor": "^7.0.0",
     "ts-node": "^9.1.1",
-    "typescript": "4.1.5",
+    "typescript": "4.3.5",
     "husky": "^7.0.0"
   },
   "browser": {
