--- a/package.json
+++ b/package.json
@@ -174,6 +174,7 @@
     "@ngx-translate/http-loader": "~6.0.0",
     "@sebgroup/magic-iframe": "1.1.2",
     "@types/jest": "~26.0.23",
+    "assert": "2.0.0",
     "aws-sdk": "2.928.0",
     "aws-sdk-mock": "5.3.0",
     "bootstrap": "~4.6.0",
@@ -193,6 +194,7 @@
     "fix-path": "~3.0.0",
     "follow-redirects": "1.14.0",
     "fs-extra": "~9.1.0",
+    "fs-web": "1.0.1",
     "github-url-to-object": "^4.0.6",
     "global-tunnel": "~1.2.0",
     "http-proxy-agent": "4.0.1",
@@ -219,6 +221,7 @@
     "saml-encoder-decoder-js": "~1.0.1",
     "semver": "~7.3.5",
     "standard-version": "^9.3.0",
+    "stream-browserify": "3.0.0",
     "sudo-prompt": "~9.2.1",
     "tslib": "~2.2.0",
     "update-electron-app": "~2.0.1",
