chore: updated electron to version 13.1.7

--- a/package.json
+++ b/package.json
@@ -248,12 +248,12 @@
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "4.16.1",
     "@typescript-eslint/parser": "4.16.1",
-    "electron": "12.0.5",
-    "electron-builder": "~22.10.5",
-    "electron-builder-squirrel-windows": "~22.10.5",
-    "electron-installer-dmg": "~3.0.0",
-    "electron-packager": "~15.2.0",
-    "electron-rebuild": "~2.3.5",
+    "electron": "13.1.7",
+    "electron-builder": "22.14.3",
+    "electron-builder-squirrel-windows": "22.14.3",
+    "electron-installer-dmg": "3.0.0",
+    "electron-packager": "15.4.0",
+    "electron-rebuild": "3.2.3",
     "eslint": "^7.6.0",
     "eslint-plugin-import": "latest",
     "eslint-plugin-jsdoc": "latest",
