--- a/package.json
+++ b/package.json
@@ -241,6 +241,7 @@
     "@angular/compiler-cli": "^12.2.7",
     "@angular/language-service": "~12.2.7",
     "@biesbjerg/ngx-translate-extract": "^7.0.4",
+    "@electron/remote": "^2.0.1",
     "@types/aws-sdk": "^2.7.0",
     "@types/jasmine": "^3.6.10",
     "@types/jasminewd2": "~2.0.8",
