--- a/package.json
+++ b/package.json
@@ -249,7 +249,7 @@
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "4.16.1",
     "@typescript-eslint/parser": "4.16.1",
-    "electron": "^15.0.0",
+    "electron": "15.0.0",
     "electron-builder": "22.14.3",
     "electron-builder-squirrel-windows": "22.14.3",
     "electron-installer-dmg": "3.0.0",
