--- a/package.json
+++ b/package.json
@@ -154,10 +154,12 @@
   },
   "dependencies": {
     "@angular/animations": "~12.2.7",
+    "@angular/cdk": "^12.2.9",
     "@angular/common": "~12.2.7",
     "@angular/compiler": "~12.2.7",
     "@angular/core": "~12.2.7",
     "@angular/forms": "~12.2.7",
+    "@angular/material": "^12.2.9",
     "@angular/platform-browser": "~12.2.7",
     "@angular/platform-browser-dynamic": "~12.2.7",
     "@angular/router": "~12.2.7",
