--- a/package.json
+++ b/package.json
@@ -271,7 +271,8 @@
     "nyc": "^15.1.0",
     "protractor": "^7.0.0",
     "ts-node": "^9.1.1",
-    "typescript": "4.3.5"
+    "typescript": "4.3.5",
+    "util": "^0.12.4"
   },
   "browser": {
     "crypto": false
