chore: fixed time in aws sso expiration marker in UI, changed name to integration component

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -39,7 +39,7 @@ nav:
       - 'Updater': 'contributing/updater.md'
       - 'System Vault': 'contributing/system_vault.md'
       - 'AWS Named Profiles': 'contributing/aws_named_profiles.md'
-      - 'AWS SSO': 'contributing/aws-sso.md'
+      - 'AWS SSO': 'contributing/integration.md'
       - 'Default Options': 'contributing/default_options.md'
       - 'Integrations': 'contributing/integrations.md'
   - 'Community':
