--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,7 +13,7 @@ nav:
           - 'Update Leapp': 'installation/update-leapp.md'
       - Sessions: 'sessions.md'
       - Integrations: 'integrations.md'
-  - 'Configuring Session':
+  - 'Configuring a Session':
       - 'Configure AWS IAM User': 'configuring-session/configure-aws-iam-user.md'
       - 'Configure AWS IAM Role Federated': 'configuring-session/configure-aws-iam-role-federated.md'
       - 'Configure AWS IAM Role Chained': 'configuring-session/configure-aws-iam-role-chained.md'
