--- a/package.json
+++ b/package.json
@@ -180,6 +180,7 @@
     "compare-versions": "^3.6.0",
     "copy-dir": "~1.3.0",
     "crypto-js": "~4.0.0",
+    "date-fns": "^2.26.0",
     "electron-default-menu": "~1.0.2",
     "electron-is-dev": "^2.0.0",
     "electron-log": "~4.3.4",
